--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -1,6 +1,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@android:color/white"
                 tools:context=".MainActivity">
+
+
+    <RelativeLayout
+            android:id="@+id/preview_container"
+            android:layout_marginTop="@dimen/common_margin_big"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/preview_border_round"
+            android:layout_width="300dp"
+            android:layout_height="300dp">
+
+        <ImageView
+                android:id="@+id/image"
+                android:src="@drawable/test3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        <ImageView
+                android:id="@+id/shape"
+                android:src="@drawable/square_shape"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        <TextView
+                android:id="@+id/txt_time"
+                android:layout_centerInParent="true"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </RelativeLayout>
+
 
 </RelativeLayout>
