--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -19,5 +19,8 @@
     <dimen name="guide_pic_margin">50dp</dimen>
     <dimen name="guide_pic_edge">220dp</dimen>
     <dimen name="shape_or_padding">16dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 
 </resources>
